@@ -877,7 +877,7 @@
 <!--  Mapping for ContentVersion  -->
   <class name="org.infoglue.cms.entities.content.impl.simple.ContentVersionImpl" identity="contentVersionId" key-generator="IDENTITY">
     <description>ContentVersion</description>
-    <cache-type type="unlimited" capacity="10000"/>
+    <cache-type type="unlimited" capacity="5000"/>
     <map-to table="cmContentVersion"/>
     <field name="contentVersionId" type="java.lang.Integer">
       <sql name="contentVersionId" type="integer" dirty="check" />
